--- a/index.html
+++ b/index.html
@@ -510,23 +510,23 @@
             <div class="address-box bill-to">
                 <div class="address-label">Bill To</div>
                 <div class="address-content">
-                    <strong>R Sai Kiran</strong>
-                    Colony Street, Kannapudora Valasa,<br>
-                    Jiyyammavalasa Subdistrict,<br>
-                    Vizianagaram District 535526<br>
+                    <strong>Manoj Kumar</strong>
+                    Parvathipuram, Nearby Style Baazar,<br>
+                    Parvathipuram Town,<br>
+                    Parvathipuram Manyam District 535501<br>
                     Andhra Pradesh<br>
-                    Phone: xxxxxxxxxx
+                    Phone: 7989322031
                 </div>
             </div>
             <div class="address-box ship-to">
                 <div class="address-label">Ship To</div>
                 <div class="address-content">
-                    <strong>R Sai Kiran</strong>
-                    Colony Street, Kannapudora Valasa,<br>
-                    Jiyyammavalasa Subdistrict,<br>
-                    Vizianagaram District 535526<br>
+                    <strong>Manoj Kumar</strong>
+                    Parvathipuram, Nearby Style Baazar,<br>
+                    Parvathipuram Town,<br>
+                    Parvathipuram Manyam District 535501<br>
                     Andhra Pradesh<br>
-                    Phone: xxxxxxxxxx
+                    Phone: 7989322031
                 </div>
             </div>
         </div>
