--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
                 <tr>
                     <th style="width: 45%;">Description of Goods</th>
                     <th style="width: 8%;">Qty</th>
-                    <th style="width: 12%;">Rate (₹)</th>
+                    <th style="width: 12%;">Rate</th>
                     <th style="width: 10%;">Discount</th>
                     <th style="width: 12%;">Taxable Value</th>
-                    <th style="width: 13%;">Amount (₹)</th>
+                    <th style="width: 13%;">Amount</th>
                 </tr>
             </thead>
             <tbody>
@@ -499,11 +499,11 @@
                             </div>
                         </div>
                     </td>
-                    <td>1<br>Nos</td>
+                    <td>1 Nos</td>
                     <td class="amount-cell">599,999.00</td>
                     <td class="amount-cell">50,000.00</td>
-                    <td class="amount-cell">465,253.39</td>
                     <td class="amount-cell">549,999.00</td>
+                    <td class="amount-cell">648,998.82</td>
                 </tr>
             </tbody>
         </table>
@@ -512,7 +512,7 @@
         <div class="summary-section">
             <div class="amount-words">
                 <div class="amount-words-label">Amount Chargeable (in words)</div>
-                <div><strong>Indian Rupees Five Lakh Forty Nine Thousand Nine Hundred Ninety Nine Only</strong></div>
+                <div><strong>Indian Rupees Six Lakh Forty Eight Thousand Nine Hundred Ninety Eight and Eighty Two Paise Only</strong></div>
             </div>
             <table class="summary-table">
                 <tr>
@@ -525,15 +525,15 @@
                 </tr>
                 <tr>
                     <td>Taxable Value</td>
-                    <td>465,253.39</td>
+                    <td>549,999.00</td>
                 </tr>
                 <tr>
                     <td>Add: IGST @ 18%</td>
-                    <td>83,745.61</td>
+                    <td>98,999.82</td>
                 </tr>
                 <tr class="total-row">
                     <td><strong>Grand Total</strong></td>
-                    <td><strong>₹ 549,999.00</strong></td>
+                    <td><strong>₹ 648,998.82</strong></td>
                 </tr>
             </table>
         </div>
