--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <div class="info-bar">
                 <div class="info-item">
                     <div class="info-label">Invoice Number</div>
-                    <div class="info-value">INV-TN-2025-001234</div>
+                    <div class="info-value">INV-AP-2025-001273</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Invoice Date</div>
@@ -513,7 +513,7 @@
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order ID</div>
-                    <div class="info-value">OD987654321098765</div>
+                    <div class="info-value">OD365528852238633</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order Date</div>
