--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             margin-top: 4px;
             font-size: 8pt;
             font-weight: bold;
-            color: #e74c3c;
+            color: #2980b9;
         }
 
         /* Product Table */
@@ -505,7 +505,7 @@
             <div class="info-bar">
                 <div class="info-item">
                     <div class="info-label">Invoice Number</div>
-                    <div class="info-value">INV-AP-2025-001273</div>
+                    <div class="info-value">INV-AP-2025-001274</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Invoice Date</div>
@@ -513,7 +513,7 @@
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order ID</div>
-                    <div class="info-value">OD365528852238633</div>
+                    <div class="info-value">OD365528852238634</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order Date</div>
@@ -564,27 +564,29 @@
                 <tbody>
                     <tr>
                         <td>
-                            <div class="prod-title">MSI Titan 18 HX AI Gaming Laptop</div>
+                            <div class="prod-title">Fujitsu UH-X 4ZR1L73352 Convertible Laptop</div>
                             <div class="prod-specs">
-                                <span>• Intel Core Ultra 9 285HX</span>
-                                <span>• RTX 5090 24GB GPU</span>
-                                <span>• 18" UHD+ 120Hz Display</span>
-                                <span>• 128GB DDR5 RAM</span>
-                                <span>• 4TB NVMe SSD</span>
+                                <span>• 13th Gen Intel Core i7-1360P</span>
+                                <span>• 13.3" FHD Touch Display</span>
+                                <span>• 2-in-1 Convertible</span>
+                                <span>• 16GB LPDDR5 RAM</span>
+                                <span>• 1TB NVMe SSD</span>
                                 <span>• Windows 11 Pro</span>
+                                <span>• Black Color</span>
+                                <span>• 988 grams Ultra-Light</span>
                             </div>
-                            <div class="prod-meta">FSN: LPTGYV98E5Z8NHTZ | HSN/SAC: 84713010</div>
+                            <div class="prod-meta">Model: 4ZR1L73352 | HSN/SAC: 84713010</div>
                             <div class="serial-box">
                                 <span class="serial-label">Serial:</span>
-                                <span class="serial-num">862448051012514</span>
+                                <span class="serial-num">FJTX988123456789</span>
                                 <div class="warranty-small">Warranty: 2Y Laptop, 1Y Battery/Adapter | IGST @ 18%</div>
                             </div>
                         </td>
                         <td>1<br>Nos</td>
-                        <td class="amt">599,999.00</td>
-                        <td class="amt">50,000.00</td>
-                        <td class="amt">549,999.00</td>
-                        <td class="amt">648,998.82</td>
+                        <td class="amt">152,000.00</td>
+                        <td class="amt">0.00</td>
+                        <td class="amt">128,813.56</td>
+                        <td class="amt">152,000.00</td>
                     </tr>
                 </tbody>
             </table>
@@ -593,29 +595,29 @@
             <div class="summary-section">
                 <div class="words-box">
                     <div class="words-label">Amount Chargeable (in words)</div>
-                    <div class="words-text">Indian Rupees Six Lakh Forty Eight Thousand Nine Hundred Ninety Eight and Eighty Two Paise Only</div>
+                    <div class="words-text">Indian Rupees One Lakh Fifty Two Thousand Only</div>
                 </div>
                 <div class="calc-box">
                     <div class="calc-header">Bill Summary</div>
                     <div class="calc-row">
                         <span class="calc-label">Sub Total</span>
-                        <span class="calc-value">599,999.00</span>
+                        <span class="calc-value">152,000.00</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Less: Discount</span>
-                        <span class="calc-value">-50,000.00</span>
+                        <span class="calc-value">0.00</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Taxable Value</span>
-                        <span class="calc-value">549,999.00</span>
+                        <span class="calc-value">128,813.56</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Add: IGST @ 18%</span>
-                        <span class="calc-value">98,999.82</span>
+                        <span class="calc-value">23,186.44</span>
                     </div>
                     <div class="calc-row total">
                         <span class="calc-label">Grand Total</span>
-                        <span class="calc-value">₹ 648,998.82</span>
+                        <span class="calc-value">₹ 152,000.00</span>
                     </div>
                 </div>
             </div>
