--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <div class="info-bar">
                 <div class="info-item">
                     <div class="info-label">Invoice Number</div>
-                    <div class="info-value">INV-AP-2025-001274</div>
+                    <div class="info-value">INV-AP-2025-001275</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Invoice Date</div>
@@ -513,7 +513,7 @@
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order ID</div>
-                    <div class="info-value">OD365528852238634</div>
+                    <div class="info-value">OD365528852238635</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order Date</div>
@@ -564,29 +564,30 @@
                 <tbody>
                     <tr>
                         <td>
-                            <div class="prod-title">Fujitsu UH-X 4ZR1L73352 Convertible Laptop</div>
+                            <div class="prod-title">HP OmniBook Ultra Flip 14-fh0369TU</div>
                             <div class="prod-specs">
-                                <span>• 13th Gen Intel Core i7-1360P</span>
-                                <span>• 13.3" FHD Touch Display</span>
-                                <span>• 2-in-1 Convertible</span>
-                                <span>• 16GB LPDDR5 RAM</span>
-                                <span>• 1TB NVMe SSD</span>
-                                <span>• Windows 11 Pro</span>
-                                <span>• Black Color</span>
-                                <span>• 988 grams Ultra-Light</span>
+                                <span>• 35.6 cm (14") 2.8K OLED Touch</span>
+                                <span>• Next Gen AI PC</span>
+                                <span>• Intel Core Ultra 7 258V</span>
+                                <span>• 32GB LPDDR5x RAM</span>
+                                <span>• 2TB NVMe SSD</span>
+                                <span>• Intel Arc Graphics</span>
+                                <span>• Windows 11 Home</span>
+                                <span>• 360° Flip Design</span>
+                                <span>• Blue Color</span>
                             </div>
-                            <div class="prod-meta">Model: 4ZR1L73352 | HSN/SAC: 84713010</div>
+                            <div class="prod-meta">Model: 14-fh0369TU | HSN/SAC: 84713010</div>
                             <div class="serial-box">
                                 <span class="serial-label">Serial:</span>
-                                <span class="serial-num">FJTX988123456789</span>
-                                <div class="warranty-small">Warranty: 2Y Laptop, 1Y Battery/Adapter | IGST @ 18%</div>
+                                <span class="serial-num">5CG1234ABC789XYZ</span>
+                                <div class="warranty-small">Warranty: 1Y HP Warranty, 1Y ADP | IGST @ 18%</div>
                             </div>
                         </td>
                         <td>1<br>Nos</td>
-                        <td class="amt">152,000.00</td>
+                        <td class="amt">189,000.00</td>
                         <td class="amt">0.00</td>
-                        <td class="amt">128,813.56</td>
-                        <td class="amt">152,000.00</td>
+                        <td class="amt">160,169.49</td>
+                        <td class="amt">189,000.00</td>
                     </tr>
                 </tbody>
             </table>
@@ -595,13 +596,13 @@
             <div class="summary-section">
                 <div class="words-box">
                     <div class="words-label">Amount Chargeable (in words)</div>
-                    <div class="words-text">Indian Rupees One Lakh Fifty Two Thousand Only</div>
+                    <div class="words-text">Indian Rupees One Lakh Eighty Nine Thousand Only</div>
                 </div>
                 <div class="calc-box">
                     <div class="calc-header">Bill Summary</div>
                     <div class="calc-row">
                         <span class="calc-label">Sub Total</span>
-                        <span class="calc-value">152,000.00</span>
+                        <span class="calc-value">189,000.00</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Less: Discount</span>
@@ -609,15 +610,15 @@
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Taxable Value</span>
-                        <span class="calc-value">128,813.56</span>
+                        <span class="calc-value">160,169.49</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Add: IGST @ 18%</span>
-                        <span class="calc-value">23,186.44</span>
+                        <span class="calc-value">28,830.51</span>
                     </div>
                     <div class="calc-row total">
                         <span class="calc-label">Grand Total</span>
-                        <span class="calc-value">₹ 152,000.00</span>
+                        <span class="calc-value">₹ 189,000.00</span>
                     </div>
                 </div>
             </div>
