--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+.:
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,7 +69,7 @@
             width: 75%;
         }
 
-        .company-name {
+.company-name {
             font-size: 16pt;
             font-weight: bold;
             color: #2980b9;
@@ -250,7 +251,7 @@
             font-size: 8pt;
         }
 
-        .prod-title {
+.prod-title {
             font-weight: bold;
             font-size: 9pt;
             color: #2980b9;
@@ -433,7 +434,7 @@
             font-size: 8pt;
         }
 
-        .page-footer {
+.page-footer {
             text-align: center;
             font-size: 7pt;
             color: #666;
@@ -489,7 +490,7 @@
                     <div class="company-info">
                         Ship-from: 42B, Tech Park Avenue, Electronic City Phase II, Bangalore - 560100, Karnataka | 
                         GSTIN: 29AABCT1234N1ZV | PAN: AABCT1234N | CIN: U74999KA2021PTC123456 | 
-                        Email: support@technova.com | Phone: 1800-123-4567
+                        Email: support@technova.com | Phone: 1800
                     </div>
                 </div>
                 <div class="header-right">
@@ -505,19 +506,19 @@
             <div class="info-bar">
                 <div class="info-item">
                     <div class="info-label">Invoice Number</div>
-                    <div class="info-value">INV-AP-2025-001275</div>
+                    <div class="info-value">INV-AP-2026-000182</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Invoice Date</div>
-                    <div class="info-value">15-01-2025</div>
+                    <div class="info-value">10-01-2026</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order ID</div>
-                    <div class="info-value">OD365528852238635</div>
+                    <div class="info-value">OD443952238635999</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Order Date</div>
-                    <div class="info-value">15-01-2025</div>
+                    <div class="info-value">10-01-2026</div>
                 </div>
             </div>
 
@@ -539,7 +540,8 @@
                     <div class="addr-header">Ship To</div>
                     <div class="addr-body">
                         <div class="addr-name">Manoj Kumar</div>
-                        <div class="addr-text">
+
+<div class="addr-text">
                             Parvathipuram, Nearby Style Baazar,<br>
                             Parvathipuram Town, Parvathipuram Manyam District - 535501,<br>
                             Andhra Pradesh
@@ -564,30 +566,30 @@
                 <tbody>
                     <tr>
                         <td>
-                            <div class="prod-title">HP OmniBook Ultra Flip 14-fh0369TU</div>
+                            <div class="prod-title">MSI Titan 18 HX AI Intel Series 2</div>
                             <div class="prod-specs">
-                                <span>• 35.6 cm (14") 2.8K OLED Touch</span>
-                                <span>• Next Gen AI PC</span>
-                                <span>• Intel Core Ultra 7 258V</span>
-                                <span>• 32GB LPDDR5x RAM</span>
-                                <span>• 2TB NVMe SSD</span>
-                                <span>• Intel Arc Graphics</span>
+                                <span>• 46cm (18.4") UHD+ MiniLED 120Hz</span>
+                                <span>• Intel Core Ultra 9 285HX</span>
+                                <span>• 96GB DDR5 RAM</span>
+                                <span>• 6TB NVMe SSD</span>
+                                <span>• NVIDIA GeForce RTX 5090 GDDR7 24GB</span>
                                 <span>• Windows 11 Home</span>
-                                <span>• 360° Flip Design</span>
-                                <span>• Blue Color</span>
+                                <span>• Core Black</span>
+                                <span>• 3.6Kg</span>
+                                <span>• AI Gaming Laptop</span>
                             </div>
-                            <div class="prod-meta">Model: 14-fh0369TU | HSN/SAC: 84713010</div>
+                            <div class="prod-meta">Model: A2XWJG-297IN | HSN/SAC: 84713010</div>
                             <div class="serial-box">
                                 <span class="serial-label">Serial:</span>
-                                <span class="serial-num">5CG1234ABC789XYZ</span>
-                                <div class="warranty-small">Warranty: 1Y HP Warranty, 1Y ADP | IGST @ 18%</div>
+                                <span class="serial-num">MSI18K9RTX5090X987654</span>
+                                <div class="warranty-small">Warranty: 2Y MSI Warranty | IGST @ 18%</div>
                             </div>
                         </td>
                         <td>1<br>Nos</td>
-                        <td class="amt">189,000.00</td>
-                        <td class="amt">0.00</td>
-                        <td class="amt">160,169.49</td>
-                        <td class="amt">189,000.00</td>
+                        <td class="amt">599,999.00</td>
+                        <td class="amt">50,000.00</td>
+                        <td class="amt">549,999.00</td>
+                        <td class="amt">648,998.82</td>
                     </tr>
                 </tbody>
             </table>
@@ -596,29 +598,30 @@
             <div class="summary-section">
                 <div class="words-box">
                     <div class="words-label">Amount Chargeable (in words)</div>
-                    <div class="words-text">Indian Rupees One Lakh Eighty Nine Thousand Only</div>
+                    <div class="words-text">Indian Rupees Six Lakh Forty Eight Thousand Nine Hundred Ninety Eight and Eighty Two Paise Only</div>
                 </div>
                 <div class="calc-box">
                     <div class="calc-header">Bill Summary</div>
                     <div class="calc-row">
                         <span class="calc-label">Sub Total</span>
-                        <span class="calc-value">189,000.00</span>
+                        <span class="calc-value">599,999.00</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Less: Discount</span>
-                        <span class="calc-value">0.00</span>
+                        <span class="calc-value">50,000.00</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Taxable Value</span>
-                        <span class="calc-value">160,169.49</span>
+                        <span class="calc-value">549,999.00</span>
                     </div>
                     <div class="calc-row">
                         <span class="calc-label">Add: IGST @ 18%</span>
-                        <span class="calc-value">28,830.51</span>
+
+<span class="calc-value">98,999.82</span>
                     </div>
                     <div class="calc-row total">
                         <span class="calc-label">Grand Total</span>
-                        <span class="calc-value">₹ 189,000.00</span>
+                        <span class="calc-value">₹ 648,998.82</span>
                     </div>
                 </div>
             </div>
@@ -637,13 +640,13 @@
                 </div>
 
                 <div class="contact-bar">
-                    <span class="contact-item">📞 1800-123-4567</span>
+                    <span class="contact-item">📞 1800</span>
                     <span class="contact-item">✉️ support@technova.com</span>
                     <span class="contact-item">🌐 www.technova.com</span>
                 </div>
 
                 <div class="page-footer">
-                    <strong>Invoice Generated:</strong> 15-01-2025 | <strong>Page 1 of 1</strong> | E. & O.E.<br>
+                    <strong>Invoice Generated:</strong> 10-01-2026 | <strong>Page 1 of 1</strong> | E. & O.E.<br>
                     TechNova Retail Solutions Pvt Ltd, Bangalore - 560100
                 </div>
             </div>
